kube/media/prowlarr/prowlarr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  template:
    metadata:
      annotations:
        fluentbit.io/parser: "prowlarr"
        diun.enable: "true"
      labels:
        app.kubernetes.io/name: prowlarr
    spec:
      terminationGracePeriodSeconds: 15

      restartPolicy: Always
      volumes:
      - name: prowlarr-config
        persistentVolumeClaim:
          claimName: prowlarr-config
      - name: data
        nfs: # data folder is a mounted pre-existing NFS share, *not* a PV/PVC
          server: 192.168.1.200
          path: /volume1/Media
      containers:
      - env:
        - name: TZ
          value: America/New_York
        - name: PUID
          value: '444'
        - name: PGID
          value: '321'
        - name: UMASK
          value: '002'

        # https://hub.docker.com/r/linuxserver/prowlarr/tags
        image: linuxserver/prowlarr:2.4.0
        imagePullPolicy: IfNotPresent
        name: prowlarr
        resources:
          requests:
            memory: 128Mi
          limits:
            memory: 512Mi
        ports:
        - containerPort: 9696
          name: http
          protocol: TCP
        stdin: true
        tty: true
        volumeMounts:
        - mountPath: /config
          name: prowlarr-config
