kube/media/prowlarr/network.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-lan
  namespace: media
  annotations:
    metallb.io/loadBalancerIPs: "192.168.1.229"
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: prowlarr
  ports:
  - name: http
    port: 9696
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prowlarr
  ports:
  - name: http
    port: 9696
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - prowlarr.matthew-stratton.me
    secretName: prowlarr-tls
  rules:
  - host: prowlarr.matthew-stratton.me
    http:
      paths:
      - backend:
          service:
            name: prowlarr
            port:
              number: 9696
        path: /
        pathType: Prefix
